# ktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.sh  ktop.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: release.yml
ktop-rs/: Cargo.toml
ktop-rs/src/: app.rs  config.rs  gpu.rs  main.rs  system.rs  theme.rs  ui.rs
src/ktop/: __init__.py
