[package]
name = "ktop"
version = "1.0.2"
edition = "2021"
description = "Terminal system resource monitor for hybrid LLM workloads"
license = "MIT"

[[bin]]
name = "ktop"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
sysinfo = "0.33"
nvml-wrapper = "0.10"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
